<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="creationTicketVm"
            type="com.spider.star.nexbaseclient.ticketcreation.viewmodal.CreationTicketVm" />



    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:onClick="@{creationTicketVm::onClickBackpress}"
                            android:src="@drawable/ic_left_arrow" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="@string/ticket_creation"
                            android:textAllCaps="false"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            app:font="@{@string/pt_sans_web_text_regular}"/>


                    </LinearLayout>

                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.AppBarLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_problem"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:font="@{@string/pt_sans_web_text_regular}"/>


                <Spinner
                    android:id="@+id/road"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.8"
                    android:textSize="16sp"
                    android:background="@drawable/spin_bg">

                </Spinner>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/details"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:font="@{@string/pt_sans_web_text_regular}"/>


                <EditText
                    android:id="@+id/description"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:hint="Type here..."
                    android:gravity="top"
                    android:padding="5dp"
                    android:background="@drawable/border_linegray"
                    app:font="@{@string/pt_sans_web_text_regular}"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_request_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_type"
                        android:textColor="#000"
                        android:textSize="18sp"
                        app:font="@{@string/pt_sans_web_text_regular}"/>



                    <LinearLayout
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:weightSum="1">

                        <RadioButton
                            android:id="@+id/radioButton_one"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/urgent_immediately"
                            android:textSize="15sp"
                            android:buttonTint="@color/black"
                            app:font="@{@string/pt_sans_web_text_regular}"/>

                        <RadioButton
                            android:id="@+id/radioButton_two"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/schedule_time"
                            android:textSize="15sp"
                            android:buttonTint="@color/black"
                            app:font="@{@string/pt_sans_web_text_regular}"/>
                    </RadioGroup>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


            <TextView
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/submits"
                android:gravity="center"
                android:onClick="@{creationTicketVm::OnClickticketsubmit}"
                android:layout_marginTop="30dp"
                app:font="@{@string/pt_sans_web_text_regular}"/>

        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>


</layout>