<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="ratingVm"
            type="com.spider.star.nexbaseclient.rateing.viewmodal.RatingVm"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark">

                <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:onClick="@{ratingVm::OnClickbackpress}"
                            android:src="@drawable/ic_left_arrow" />


                        <TextView
                            android:layout_marginLeft="20dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            app:font="@{@string/pt_sans_web_text_regular}"/>


                    </LinearLayout>

                </android.support.v7.widget.Toolbar>


            </android.support.design.widget.AppBarLayout>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_us"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:font="@{@string/pt_sans_web_text_regular}"/>

<!--

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal">


                    <CheckBox
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:button="@drawable/custom_rating"/>

                    <CheckBox
                        android:layout_marginStart="5dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:button="@drawable/custom_rating"/>

                    <CheckBox
                        android:layout_marginStart="5dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:button="@drawable/custom_rating"/>

                    <CheckBox
                        android:layout_marginStart="5dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:button="@drawable/custom_rating"/>

                    <CheckBox
                        android:layout_marginStart="5dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:button="@drawable/custom_rating"/>

                </LinearLayout>
-->

                <RatingBar
                    android:layout_marginTop="5dp"
                    android:id="@+id/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:layout_gravity="center" />


                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    app:font="@{@string/pt_sans_web_text_regular}"/>



                <EditText
                    android:id="@+id/feed_back"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="Type here..."
                    android:gravity="top"
                    android:padding="5dp"
                    android:background="@drawable/border_linegray"
                    app:font="@{@string/pt_sans_web_text_regular}"/>



                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/conformation_checkbox"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:button="@drawable/custom_checkbox"/>


                    <TextView
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:textSize="18sp"
                        android:text="@string/please_conform_to_close_the_ticket"
                        android:layout_gravity="center"
                        app:font="@{@string/pt_sans_web_text_regular}"/>

                </LinearLayout>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:text="@string/submits"
                    android:gravity="center"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:onClick="@{ratingVm::OnClickCloseTicket}"
                    app:font="@{@string/pt_sans_web_text_regular}"/>


            </LinearLayout>



        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>