<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="otpVm"
            type="com.spider.star.nexbaseclient.otp.viewmodal.OtpVm" />
        <variable
            name="otpModal"
            type="com.spider.star.nexbaseclient.otp.modal.OtpModal"/>
    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/nex_base"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:font="@{@string/pt_sans_web_text_bold}"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/otp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        app:font="@{@string/pt_sans_web_text_bold}"/>

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/otp"
                        android:backgroundTint="@color/white"
                        android:textSize="18sp"
                        android:inputType="number"
                        android:gravity="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:text="@={otpModal.otp}"
                        android:layout_gravity="center"
                        app:font="@{@string/pt_sans_web_text_regular}" />


<!--
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/pin_first_edittext"
                            style="@style/pin_edittext_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </EditText>

                        <EditText
                            android:id="@+id/pin_second_edittext"
                            style="@style/pin_edittext_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">


                        </EditText>

                        <EditText
                            android:id="@+id/pin_third_edittext"
                            style="@style/pin_edittext_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">


                        </EditText>

                        <EditText
                            android:id="@+id/pin_forth_edittext"
                            style="@style/pin_edittext_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">


                        </EditText>

                    </LinearLayout>-->

                    <TextView
                        android:id="@+id/login"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/cornor_roundbutton"
                        android:gravity="center"
                        android:onClick="@{otpVm::OnClickLogin}"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:font="@{@string/pt_sans_web_text_bold}"/>

                </LinearLayout>

            </RelativeLayout>


        </android.support.design.widget.CoordinatorLayout>


</layout>